--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.24",
+    "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.20",
     "expo-splash-screen": "~0.27.5",
@@ -39,9 +41,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-av": "~14.0.6"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -50,9 +50,9 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3",
-    "prettier": "^2.1.1"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
